src/objects/AccountMasterProp__c.object
<CustomObject>
    <fields>
        <fullName>AccountMasterRef__c</fullName>
        <label>会計商品（親)</label>
        <referenceTo>AccountMaster__c</referenceTo>
        <relationshipLabel>商品属性情報</relationshipLabel>
        <relationshipName>AccountMasterPropRef</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Field5Cal__c</fullName>
        <formula>NULLVALUE ( Field5__c , AccountMasterRef__r.Field5__c )</formula>
        <label>$単価</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Field5__c</fullName>
        <label>単価</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>商品属性情報</label>
    <nameField>
        <label>商品属性名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>